fix: address zizmor security findings in GitHub Actions workflows
- ci.yml: Fix template injection vulnerability by using env var for
  github.event.before instead of direct interpolation in shell command
- ci.yml: Add comments to security-events permission
- cd.yml: Add comments to contents, id-token, and attestations permissions
- deploy-viewer.yml: Add explicit 'permissions: {}' at workflow level

Closes: bn-233a

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -64,9 +64,9 @@ jobs:
     timeout-minutes: 30
 
     permissions:
-      contents: write
-      id-token: write
-      attestations: write
+      contents: write # Required to create releases and upload assets
+      id-token: write # Required for OIDC token for artifact attestations
+      attestations: write # Required to create artifact attestations
 
     steps:
       - name: Checkout repository
