--- a/.github/workflows/deploy-viewer.yml
+++ b/.github/workflows/deploy-viewer.yml
@@ -5,6 +5,9 @@ on:
     types: [published]
   workflow_dispatch:
 
+# Explicitly disable permissions at workflow level; jobs must declare their own
+permissions: {}
+
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
