--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,8 +106,8 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     permissions:
-      contents: read
-      security-events: write
+      contents: read # Needed to checkout code
+      security-events: write # Needed to upload SARIF results to GitHub Security tab
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -165,8 +165,11 @@ jobs:
 
       - name: Check for GUI changes
         id: changes
+        env:
+          # Use env var to avoid template injection vulnerability
+          BEFORE_SHA: ${{ github.event.before || 'HEAD~1' }}
         run: |
-          if git diff --name-only ${{ github.event.before || 'HEAD~1' }} HEAD | grep -qE '^(web/|src/commands/gui/)'; then
+          if git diff --name-only "${BEFORE_SHA}" HEAD | grep -qE '^(web/|src/commands/gui/)'; then
             echo "gui_changed=true" >> $GITHUB_OUTPUT
           else
             echo "gui_changed=false" >> $GITHUB_OUTPUT
